# fmazzoni.github.io

./: .gitignore  PELICAN_TO_SVELTEKIT_MIGRATION.md  README.md  _config.yml  mdsvex.config.js  notes.md  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js  tsconfig.json
.github/.workflows/: pelican.yml
.github/workflows/: deploy.yml  pelican.yml  test.yml
_data/: authors.yml  contact.yml
_layouts/: post.html
_posts/: 2023-05-06-Personal-Webpage.md  2023-06-12-Using-Mathjax.md  home.md
_site/: 404.html  feed.xml  index.html  sitemap.xml  sw.js
_site/about/: index.html
_site/archives/: index.html
_site/assets/img/favicons/: site.webmanifest
_site/assets/js/data/: search.json  swcache.js
_site/categories/: index.html
_site/categories/blogging/: index.html
_site/categories/tutorial/: index.html
_site/posts/Personal-Webpage/: index.html
_site/tags/: index.html
_site/tags/getting-started/: index.html
_tabs/: about.md
archive/: 2023-05-06-Personal-Webpage.md  2023-12-03-First-Pelican-Post.md
blog/: pelicanconf.py  publishconf.py  tasks.py
blog/content/: 2023-06-12-Using-Mathjax.md  2023-12-03-First-Pelican-Post.md  2025-09-10-Boston311-Dashboard.md  2025-11-17-Geoid-Globe-Visualization.md  testcolors.md
blog/content/extras/: geoid_globe.html
blog/content/pages/: about.md
blog/output/: archives.html  authors.html  categories.html  first-pelican-post.html  index.html  quick-math-example.html  setting-up-this-website.html  tags.html
blog/output/author/: chat-ai-fernando.html  chat_ai.html  fernando.html
blog/output/category/: maths.html  misc.html
blog/output/pages/: about-me.html
blog/output/tag/: github.html  jekyll.html  latex.html  markdown.html  math.html  pelican.html  publishing.html
blog/theme/templates/: article.html  base.html  footer.html  page.html
content/pages/: about.md
content/posts/: 2023-12-03-First-Pelican-Post.md  2025-09-10-Boston311-Dashboard.md
custom_theme/static/css/: style.css
custom_theme/templates/: article.html  base.html  index.html  page.html
notebooks/: create_favicon.ipynb
src/: app.css  app.html
src/lib/components/: Footer.svelte  Header.svelte  MarkdownLayout.svelte
src/lib/config/: site.ts
src/lib/js/: mermaid-renderer.js  theme-toggle.js
src/lib/utils/: content.server.ts  reading-time.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/[slug]/: +page.server.ts  +page.svelte
src/routes/about/: +page.server.ts  +page.svelte
src/routes/blog/: +page.server.ts  +page.svelte
static/: robots.txt
static/css/: style.css
static/js/: copy-code-button.js  language-badges.js  mobile-navigation.js  safe-highlighting.js
(+4 files in other folders)
