[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["FMazzoni <fernando1mazzoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = { extras = ["markdown"], version = "^4.9.1" }
markdown = "^3.5.1"
typogrify = "^2.0.7"
invoke = "^2.2.0"
livereload = "^2.6.3"
pelican-render-math = "^1.0.3"
pylint = "^3.1.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.0"
ruff = "^0.4.2"
black = { extras = ["jupyter"], version = "^24.4.2" }

[tool.pylint.format]
max-line-length = "88"

[tool.poe.tasks.lint]
cmd = "ruff check"

[tool.poe.tasks.fix]
cmd = "ruff check --fix"

[tool.poe.tasks.check-formatting]
cmd = "ruff format --check"

[tool.poe.tasks.format]
cmd = "ruff format"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
serve = { shell = "bash -c 'cd blog && invoke livereload'" }